// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixInstructionProcessor background and foreground on the message (mind the order) 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      <span>
        Element has insufficient color contrast of 2.52 (background color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#8a94a8",
            }
          }
        />
        #8a94a8, foreground color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#e7ecd8",
            }
          }
        />
        #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
      </span>
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 2.52 (background color: #8a94a8, foreground color: #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor background color on the message 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  />
  <span
    className="screenReaderOnly"
  >
    color contrast of 2.52 (background color: #8a94a8; nothing else to match here)
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor foreground and background color on the message (mind the order) 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      <span>
        Element has insufficient color contrast of 2.52 (foreground color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#8a94a8",
            }
          }
        />
        #8a94a8, background color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#e7ecd8",
            }
          }
        />
        #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
      </span>
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 2.52 (foreground color: #8a94a8, background color: #e7ecd8, font size: 12.0pt, font weight: normal). Expected contrast ratio of 4.5:1
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor foreground color on the message 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  />
  <span
    className="screenReaderOnly"
  >
    color contrast of 2.52 (foreground color: #8a94a8; nothing else to match here)
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor no background nor foreground on the message 1`] = `
<React.Fragment>
  there is nothing that will trigger the processor to change the fix instruction here
</React.Fragment>
`;

exports[`FixInstructionProcessor recommendColor non-stub 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      <span>
        Element has insufficient color contrast of 4.48 (foreground color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#fefefe",
            }
          }
        />
        #fefefe, background color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#21809d",
            }
          }
        />
        #21809d, font size: 10.8pt (14.4px), font weight: normal). Expected contrast ratio of 4.5:1U
      </span>
    </span>
    <span>
      <ul>
        <li>
          <span>
            1Use foreground color: 
            <span
              className="fixInstructionColorBox"
              style={
                Object {
                  "backgroundColor": "#ffffff",
                }
              }
            />
            #ffffff and the original background color: 
            <span
              className="fixInstructionColorBox"
              style={
                Object {
                  "backgroundColor": "#21809d",
                }
              }
            />
            #21809d to meet a contrast ratio of 4.53:1
          </span>
        </li>
      </ul>
    </span>
    <span>
      <ul>
        <li>
          <span>
             Or use background color: 
            <span
              className="fixInstructionColorBox"
              style={
                Object {
                  "backgroundColor": "#1f7995",
                }
              }
            />
            #1f7995 and the original foreground color: 
            <span
              className="fixInstructionColorBox"
              style={
                Object {
                  "backgroundColor": "#fcfcfc",
                }
              }
            />
            #fcfcfc to meet a contrast ratio of 4.84:1
          </span>
        </li>
      </ul>
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    Element has insufficient color contrast of 4.48 (foreground color: #fefefe, background color: #21809d, font size: 10.8pt (14.4px), font weight: normal). Expected contrast ratio of 4.5:1Use foreground color: #ffffff and the original background color: #21809d to meet a contrast ratio of 4.53:1. Or use background color: #1f7995 and the original foreground color: #fcfcfc to meet a contrast ratio of 4.84:1.
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor we assume only one instance of fore/background color, second instance will be ignored 1`] = `
<React.Fragment>
  <span
    aria-hidden="true"
  >
    <span>
      <span>
        first foreground color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#ffffff",
            }
          }
        />
        #ffffff, second foreground: #000000, first background color: 
        <span
          className="fixInstructionColorBox"
          style={
            Object {
              "backgroundColor": "#AAAAAA",
            }
          }
        />
         second foreground: #000000, first background color: 
      </span>
    </span>
  </span>
  <span
    className="screenReaderOnly"
  >
    first foreground color: #ffffff, second foreground: #000000, first background color: #AAAAAA, second background color: #bbBBbb
  </span>
</React.Fragment>
`;

exports[`FixInstructionProcessor when we have nothing to process 1`] = `
<React.Fragment>
  nothing to process
</React.Fragment>
`;
